--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
   </head>
   <body>
 	  <div class="words">
-		  <h1>I'm a live site :P</h1>
+		  <h1>I'm a gitty channel :P</h1>
 	  </div>
 <style>
             html, body {
